--- a/src/main/resources/templates/admin/adminOrderLockFail.html
+++ b/src/main/resources/templates/admin/adminOrderLockFail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>관리자 주문 배송 처리 실패 : ${order.number}</title>
