--- a/src/main/resources/templates/category/categoryList.html
+++ b/src/main/resources/templates/category/categoryList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>카테고리 목록</title>
