--- a/src/main/resources/templates/category/productDetail.html
+++ b/src/main/resources/templates/category/productDetail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>제품 상세</title>
