--- a/src/main/resources/templates/my/orderDetail.html
+++ b/src/main/resources/templates/my/orderDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title th:text="|주문 상세: ${order.number}|">주문 상세</title>
